--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerceCMS.Data/VirtoCommerce.Content.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerceCMS.Data/VirtoCommerce.Content.Data.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E55E08B5-3AF9-467D-8F90-4BEF27BAFA28}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VirtoCommerceCMS.Data</RootNamespace>
-    <AssemblyName>VirtoCommerceCMS.Data</AssemblyName>
+    <RootNamespace>VirtoCommerce.Content.Data</RootNamespace>
+    <AssemblyName>VirtoCommerce.Content.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\..\..\</SolutionDir>
