--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
@@ -85,11 +85,11 @@
       <Project>{f7c9313b-522e-4619-abc9-8c7d4600d6b5}</Project>
       <Name>VirtoCommerce.Framework.Web</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VirtoCommerceCMS.Data\VirtoCommerce.Content.Data.csproj">
+    <ProjectReference Include="..\VirtoCommerce.Content.Data\VirtoCommerce.Content.Data.csproj">
       <Project>{e55e08b5-3af9-467d-8f90-4bef27bafa28}</Project>
       <Name>VirtoCommerce.Content.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VirtoCommerceCMS.ThemeModule.Web\VirtoCommerce.ThemeModule.Web.csproj">
+    <ProjectReference Include="..\VirtoCommerce.ThemeModule.Web\VirtoCommerce.ThemeModule.Web.csproj">
       <Project>{639fa8e1-99be-4386-9808-fc1aec35fd61}</Project>
       <Name>VirtoCommerce.ThemeModule.Web</Name>
     </ProjectReference>
