--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Customer\Services\IContactSearchService.cs" />
     <Compile Include="Customer\Services\IContactService.cs" />
     <Compile Include="Inventory\Model\InventoryInfo.cs" />
+    <Compile Include="Inventory\Model\InventoryStatus.cs" />
     <Compile Include="Inventory\Services\IInventoryService.cs" />
     <Compile Include="Order\Model\Address.cs" />
     <Compile Include="Order\Model\AddressType.cs" />
@@ -132,7 +133,7 @@
     <Compile Include="Payment\Services\IPaymentGatewayManager.cs" />
     <Compile Include="Pricing\Model\Price.cs" />
     <Compile Include="Pricing\Model\PriceEvaluationContext.cs" />
-    <Compile Include="Pricing\Model\PriceList.cs" />
+    <Compile Include="Pricing\Model\Pricelist.cs" />
     <Compile Include="Pricing\Services\IPricingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store\Model\FulfillmentCenter.cs" />
