--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Data/VirtoCommerce.PricingModule.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Data/VirtoCommerce.PricingModule.Data.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters\PriceConverter.cs" />
-    <Compile Include="Converters\PriceListConverter.cs" />
+    <Compile Include="Converters\PricelistConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\PricingRepositoryImpl.cs" />
     <Compile Include="Repositories\IFoundationPricingRepository.cs" />
