--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
@@ -58,7 +58,8 @@
     <Compile Include="Converters\ThemeItemConverter.cs" />
     <Compile Include="Models\ContentItem.cs" />
     <Compile Include="Models\ContentType.cs" />
-    <Compile Include="Models\ThemeItem.cs" />
+    <Compile Include="Models\Theme.cs" />
+    <Compile Include="Models\ThemeAsset.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DatabaseFileRepositoryImpl.cs" />
     <Compile Include="Repositories\FileSystemFileRepositoryImpl.cs" />
