--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -107,13 +107,22 @@
     <Compile Include="Module.cs" />
     <Compile Include="Notification\InMemoryNotifierImpl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\ApiAccountProvider.cs" />
+    <Compile Include="Security\ApplicationClaimsIdentityProvider.cs" />
+    <Compile Include="Security\Hmac\HmacAuthenticationExtensions.cs" />
+    <Compile Include="Security\Hmac\HmacAuthenticationHandler.cs" />
+    <Compile Include="Security\Hmac\HmacAuthenticationMiddleware.cs" />
+    <Compile Include="Security\Hmac\HmacAuthenticationOptions.cs" />
     <Compile Include="Security\ApplicationOAuthProvider.cs" />
-    <Compile Include="Security\Configs\ApplicationSignInManager.cs" />
-    <Compile Include="Security\Configs\ApplicationUserManager.cs" />
+    <Compile Include="Security\ApplicationSignInManager.cs" />
+    <Compile Include="Security\ApplicationUserManager.cs" />
     <Compile Include="Security\Data\FoundationCustomerRepositoryImpl.cs" />
     <Compile Include="Security\Data\FoundationSecurityRepositoryImpl.cs" />
     <Compile Include="Security\Data\IFoundationCustomerRepository.cs" />
     <Compile Include="Security\Data\IFoundationSecurityRepository.cs" />
+    <Compile Include="Security\Hmac\HmacUtility.cs" />
+    <Compile Include="Security\IApiAccountProvider.cs" />
+    <Compile Include="Security\IClaimsIdentityProvider.cs" />
     <Compile Include="Security\Models\AuthInfo.cs" />
     <Compile Include="Security\Models\UserLogin.cs" />
     <Compile Include="Security\Models\ApplicationUserExtended.cs" />
