--- a/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
+++ b/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
@@ -97,6 +97,14 @@
     <Compile Include="DataContracts\ItemResponseGroups.cs" />
     <Compile Include="DataContracts\Link.cs" />
     <Compile Include="DataContracts\ManagementServiceError.cs" />
+    <Compile Include="DataContracts\Order\Address.cs" />
+    <Compile Include="DataContracts\Order\CustomerOrder.cs" />
+    <Compile Include="DataContracts\Order\Discount.cs" />
+    <Compile Include="DataContracts\Order\Operation.cs" />
+    <Compile Include="DataContracts\Order\PaymentIn.cs" />
+    <Compile Include="DataContracts\Order\LineItem.cs" />
+    <Compile Include="DataContracts\Order\OrderSearchResult.cs" />
+    <Compile Include="DataContracts\Order\Shipment.cs" />
     <Compile Include="DataContracts\Product.cs" />
     <Compile Include="DataContracts\ProductVariation.cs" />
     <Compile Include="DataContracts\Resource.cs" />
@@ -115,9 +123,11 @@
     <Compile Include="DataContracts\Store\StoreState.cs" />
     <Compile Include="DataContracts\TagQuery.cs" />
     <Compile Include="Extensions\CartClientExtension.cs" />
+    <Compile Include="Extensions\OrderClientExtension.cs" />
     <Compile Include="Extensions\SeoClientExtensions.cs" />
     <Compile Include="Extensions\StoreClientExtensions.cs" />
     <Compile Include="CartClient.cs" />
+    <Compile Include="OrderClient.cs" />
     <Compile Include="SeoClient.cs" />
     <Compile Include="Session\CustomerSession.cs" />
     <Compile Include="Session\CustomerSessionService.cs" />
