Fixed references to Microsoft.WindowsAzure.StorageClient, Microsoft.ApplicationServer.Caching.Client and Microsoft.ApplicationServer.Caching.Core.

--- a/src/Azure/WorkerRoles/Search/ESWorkerRole/ESWorkerRole.csproj
+++ b/src/Azure/WorkerRoles/Search/ESWorkerRole/ESWorkerRole.csproj
@@ -95,8 +95,7 @@
       <HintPath>..\..\..\..\..\packages\WindowsAzure.Storage.3.0.1.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Shared\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
+      <HintPath>..\..\..\..\..\packages\Microsoft.WindowsAzure.StorageClient.1.0.0\lib\net\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\..\..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
