-ADD Catalog.  Catalog property support

--- a/src/Core/CommerceFoundation.Data/CommerceFoundation.Data.csproj
+++ b/src/Core/CommerceFoundation.Data/CommerceFoundation.Data.csproj
@@ -155,6 +155,10 @@
     <Compile Include="Catalogs\Migrations\201410221231370_OptionalPropertySet.Designer.cs">
       <DependentUpon>201410221231370_OptionalPropertySet.cs</DependentUpon>
     </Compile>
+    <Compile Include="Catalogs\Migrations\201502160901190_СatalogProperties.cs" />
+    <Compile Include="Catalogs\Migrations\201502160901190_СatalogProperties.Designer.cs">
+      <DependentUpon>201502160901190_СatalogProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Catalogs\SqlCatalogDatabaseInitializer.cs" />
     <Compile Include="Catalogs\SqlCatalogReducedSampleDatabaseInitializer.cs" />
     <Compile Include="Catalogs\SqlCatalogSampleDatabaseInitializer.cs" />
@@ -394,6 +398,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Catalogs\Migrations\201410221231370_OptionalPropertySet.resx">
       <DependentUpon>201410221231370_OptionalPropertySet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Catalogs\Migrations\201502160901190_СatalogProperties.resx">
+      <DependentUpon>201502160901190_СatalogProperties.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Customers\Migrations\201402141557167_Initial.resx">
       <DependentUpon>201402141557167_Initial.cs</DependentUpon>
