--- a/src/Core/CommerceFoundation/CommerceFoundation.csproj
+++ b/src/Core/CommerceFoundation/CommerceFoundation.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Assets\Services\IAssetUrl.cs" />
     <Compile Include="Assets\Services\UploadStreamInfo.cs" />
     <Compile Include="Catalogs\CatalogConfiguration.cs" />
+    <Compile Include="Catalogs\Model\CatalogPropertyValue.cs" />
     <Compile Include="Catalogs\Search\CategoryFilter.cs" />
     <Compile Include="Catalogs\Search\CategoryFilterValue.cs" />
     <Compile Include="Catalogs\Services\ICatalogOutlineBuilder.cs" />
