--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
@@ -60,6 +60,14 @@
     <Compile Include="Migrations\201502151704128_Initial.Designer.cs">
       <DependentUpon>201502151704128_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502161220499_AddContentType.cs" />
+    <Compile Include="Migrations\201502161220499_AddContentType.Designer.cs">
+      <DependentUpon>201502161220499_AddContentType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502161344479_AddThemes.cs" />
+    <Compile Include="Migrations\201502161344479_AddThemes.Designer.cs">
+      <DependentUpon>201502161344479_AddThemes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ContentItem.cs" />
     <Compile Include="Models\Theme.cs" />
@@ -89,6 +97,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201502151704128_Initial.resx">
       <DependentUpon>201502151704128_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502161220499_AddContentType.resx">
+      <DependentUpon>201502161220499_AddContentType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502161344479_AddThemes.resx">
+      <DependentUpon>201502161344479_AddThemes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
