--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="FileSystemRepositoryTest.cs" />
     <Compile Include="GitHubRepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThemeControllerTests.cs" />
     <Compile Include="ThemeServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
