-UPD Catalog. Major UI fixes. Order. Add cancel properties

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Data/VirtoCommerce.OrderModule.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Data/VirtoCommerce.OrderModule.Data.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Migrations\201502121401413_FulfillmentMisspeling.Designer.cs">
       <DependentUpon>201502121401413_FulfillmentMisspeling.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502181033544_AddCancelProperties.cs" />
+    <Compile Include="Migrations\201502181033544_AddCancelProperties.Designer.cs">
+      <DependentUpon>201502181033544_AddCancelProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\AddressEntity.cs" />
     <Compile Include="Model\CustomerOrderEntity.cs" />
@@ -111,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502121401413_FulfillmentMisspeling.resx">
       <DependentUpon>201502121401413_FulfillmentMisspeling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502181033544_AddCancelProperties.resx">
+      <DependentUpon>201502181033544_AddCancelProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
