--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/VirtoCommerce.PricingModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/VirtoCommerce.PricingModule.Web.csproj
@@ -101,6 +101,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\blades\item-prices-list.js" />
+    <Content Include="Scripts\blades\item-prices-list.tpl.html" />
+    <Content Include="Scripts\home.tpl.html" />
+    <Content Include="Scripts\pricing.js" />
+    <Content Include="Scripts\resources\pricing.js" />
+    <Content Include="Scripts\widgets\itemPricesWidget.js" />
+    <Content Include="Scripts\widgets\itemPricesWidget.tpl.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
