--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Test/packages.config
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Test/packages.config
@@ -3,5 +3,6 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
 </packages>
