FIX: missing connectionString added

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Test/VirtoCommerce.OrderModule.Test.csproj
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Test/VirtoCommerce.OrderModule.Test.csproj
@@ -112,9 +112,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="obj\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
