--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
@@ -101,6 +101,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\blades\!stores-list.js" />
+    <Content Include="Scripts\blades\!stores-list.tpl.html" />
+    <Content Include="Scripts\blades\store-detail.js" />
+    <Content Include="Scripts\blades\store-new.tpl.html" />
+    <Content Include="Scripts\blades\store-detail.tpl.html" />
+    <Content Include="Scripts\home.tpl.html" />
+    <Content Include="Scripts\store.js" />
+    <Content Include="Scripts\resources\stores.js" />
+    <Content Include="Scripts\widgets\storeLanguagesWidget.js" />
+    <Content Include="Scripts\widgets\storeLanguagesWidget.tpl.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -140,9 +150,7 @@
       <Name>VirtoCommerce.StoreModule.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
