--- a/src/Presentation/WebAdmin/Modules/Packaging/VirtoCommerce.PackagingModule.Tests/VirtoCommerce.PackagingModule.Tests.csproj
+++ b/src/Presentation/WebAdmin/Modules/Packaging/VirtoCommerce.PackagingModule.Tests/VirtoCommerce.PackagingModule.Tests.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\VirtoCommerce.Framework.Web\VirtoCommerce.Framework.Web.csproj">
+      <Project>{f7c9313b-522e-4619-abc9-8c7d4600d6b5}</Project>
+      <Name>VirtoCommerce.Framework.Web</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VirtoCommerce.PackagingModule.Data\VirtoCommerce.PackagingModule.Data.csproj">
       <Project>{9c4c5aad-c950-476e-ab74-df053eb72f50}</Project>
       <Name>VirtoCommerce.PackagingModule.Data</Name>
