--- a/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
+++ b/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
@@ -107,14 +107,14 @@
     <Compile Include="DataContracts\ItemResponseGroups.cs" />
     <Compile Include="DataContracts\Link.cs" />
     <Compile Include="DataContracts\ManagementServiceError.cs" />
-    <Compile Include="DataContracts\Order\Address.cs" />
-    <Compile Include="DataContracts\Order\CustomerOrder.cs" />
-    <Compile Include="DataContracts\Order\Discount.cs" />
-    <Compile Include="DataContracts\Order\Operation.cs" />
-    <Compile Include="DataContracts\Order\PaymentIn.cs" />
-    <Compile Include="DataContracts\Order\LineItem.cs" />
-    <Compile Include="DataContracts\Order\OrderSearchResult.cs" />
-    <Compile Include="DataContracts\Order\Shipment.cs" />
+    <Compile Include="DataContracts\Orders\Address.cs" />
+    <Compile Include="DataContracts\Orders\CustomerOrder.cs" />
+    <Compile Include="DataContracts\Orders\Discount.cs" />
+    <Compile Include="DataContracts\Orders\Operation.cs" />
+    <Compile Include="DataContracts\Orders\PaymentIn.cs" />
+    <Compile Include="DataContracts\Orders\LineItem.cs" />
+    <Compile Include="DataContracts\Orders\OrderSearchResult.cs" />
+    <Compile Include="DataContracts\Orders\Shipment.cs" />
     <Compile Include="DataContracts\Product.cs" />
     <Compile Include="DataContracts\ProductVariation.cs" />
     <Compile Include="DataContracts\Resource.cs" />
@@ -128,9 +128,9 @@
     <Compile Include="DataContracts\Security\AuthInfo.cs" />
     <Compile Include="DataContracts\SeoKeyword.cs" />
     <Compile Include="DataContracts\SeoUrlKeywordTypes.cs" />
-    <Compile Include="DataContracts\Store\Store.cs" />
-    <Compile Include="DataContracts\Store\StoreSetting.cs" />
-    <Compile Include="DataContracts\Store\StoreState.cs" />
+    <Compile Include="DataContracts\Stores\Store.cs" />
+    <Compile Include="DataContracts\Stores\StoreSetting.cs" />
+    <Compile Include="DataContracts\Stores\StoreState.cs" />
     <Compile Include="DataContracts\TagQuery.cs" />
     <Compile Include="Extensions\CartClientExtension.cs" />
     <Compile Include="Extensions\EnumerableExtension.cs" />
