-UPD Order. Minor changes. -REF Widget container registration.

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/VirtoCommerce.OrderModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/VirtoCommerce.OrderModule.Web.csproj
@@ -125,12 +125,14 @@
   <ItemGroup>
     <Content Include="module.manifest" />
     <Content Include="Scripts\blades\!customerOrder-list.js" />
-    <Content Include="Scripts\blades\!customerOrder-list.tpl.html" />
+    <Content Include="Scripts\blades\customerOrder-list.tpl.html" />
     <Content Include="Scripts\blades\customerOrder-detail.js" />
     <Content Include="Scripts\blades\customerOrder-detail.tpl.html" />
     <Content Include="Scripts\blades\customerOrder-items.js" />
     <Content Include="Scripts\blades\customerOrder-items.tpl.html" />
     <Content Include="Scripts\blades\customerOrder-detail-toolbar.tpl.html" />
+    <Content Include="Scripts\blades\shipment-detail.js" />
+    <Content Include="Scripts\blades\shipment-detail.tpl.html" />
     <Content Include="Scripts\home.tpl.html" />
     <Content Include="Scripts\order.js" />
   </ItemGroup>
@@ -163,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\resources\customerOrders.js" />
+    <Content Include="Scripts\services\!calculateTotals.js" />
     <Content Include="Scripts\widgets\customerOrder-items-widget.tpl.html" />
     <Content Include="Scripts\widgets\!customerOrder-items-widget.js" />
     <Content Include="Scripts\widgets\operation-comment-widget.js" />
