--- a/src/Presentation/WebAdmin/Modules/Inventory/VirtoCommerce.InventoryModule.Web/VirtoCommerce.InventoryModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Inventory/VirtoCommerce.InventoryModule.Web/VirtoCommerce.InventoryModule.Web.csproj
@@ -101,6 +101,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\blades\inventory-detail.js" />
+    <Content Include="Scripts\blades\inventory-detail.tpl.html" />
+    <Content Include="Scripts\resources\inventory.js" />
+    <Content Include="Scripts\inventory.js" />
+    <Content Include="Scripts\widgets\inventoryWidget.js" />
+    <Content Include="Scripts\widgets\inventoryWidget.tpl.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
