--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Tests/VirtoCommerce.Content.Tests.csproj
@@ -85,6 +85,11 @@
     <Compile Include="DatabaseRepositoryTest.cs" />
     <Compile Include="FileSystemRepositoryTest.cs" />
     <Compile Include="GitHubRepositoryTest.cs" />
+    <Compile Include="PagesTests\DatabasePagesRepositoryTests.cs" />
+    <Compile Include="PagesTests\FileSystemPagesRepositoryTests.cs" />
+    <Compile Include="PagesTests\GitHubPagesRepositoryTests.cs" />
+    <Compile Include="PagesTests\PagesControllerTests.cs" />
+    <Compile Include="PagesTests\PagesServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThemeControllerTests.cs" />
     <Compile Include="ThemeServiceTests.cs" />
@@ -106,6 +111,14 @@
       <Project>{e55e08b5-3af9-467d-8f90-4bef27bafa28}</Project>
       <Name>VirtoCommerce.Content.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VirtoCommerce.Content.Pages.Data\VirtoCommerce.Content.Pages.Data.csproj">
+      <Project>{8f9f26fc-344e-4599-b2f3-cb560f1d5499}</Project>
+      <Name>VirtoCommerce.Content.Pages.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VirtoCommerce.PagesModule.Web\VirtoCommerce.PagesModule.Web.csproj">
+      <Project>{11ff29eb-5d91-46e4-b593-0deb2f67b094}</Project>
+      <Name>VirtoCommerce.PagesModule.Web</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VirtoCommerce.ThemeModule.Web\VirtoCommerce.ThemeModule.Web.csproj">
       <Project>{639fa8e1-99be-4386-9808-fc1aec35fd61}</Project>
       <Name>VirtoCommerce.ThemeModule.Web</Name>
@@ -114,6 +127,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Pages\Apple\about_us.liquid" />
+    <None Include="Pages\Apple\contact_us.liquid" />
     <None Include="Themes\Apple\Simple\assets\checkout.css.liquid" />
     <None Include="Themes\Apple\Simple\assets\jquery.theme.js.liquid" />
     <None Include="Themes\Apple\Simple\assets\social-icons.eot" />
