--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/VirtoCommerce.ThemeModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/VirtoCommerce.ThemeModule.Web.csproj
@@ -101,20 +101,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap-markdown.min.css" />
-    <Content Include="Scripts\app\blades\collection-list.js" />
-    <Content Include="Scripts\app\blades\collection-list.tpl.html" />
-    <Content Include="Scripts\app\blades\item-detail.js" />
-    <Content Include="Scripts\app\blades\item-detail.tpl.html" />
-    <Content Include="Scripts\app\blades\item-list.js" />
-    <Content Include="Scripts\app\blades\item-list.tpl.html" />
     <Content Include="Scripts\app\content.js" />
-    <Content Include="Scripts\app\directives\bootstrap-markdown.js" />
-    <Content Include="Scripts\app\directives\markdown-editpreview-ng.js" />
-    <Content Include="Scripts\app\directives\Markdown.Converter.js" />
-    <Content Include="Scripts\app\directives\Markdown.Sanitizer.js" />
-    <Content Include="Scripts\app\directives\PageDown-LICENSE.txt" />
     <Content Include="Scripts\app\home.tpl.html" />
-    <Content Include="Scripts\app\resources\contents.js" />
+    <Content Include="Scripts\app\resources\themes.js" />
+    <Content Include="Scripts\app\widgets\themesWidget.js" />
+    <Content Include="Scripts\app\widgets\themesWidget.tpl.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +120,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Scripts\app\blades\" />
+    <Folder Include="Scripts\app\directives\" />
     <Folder Include="Scripts\app\wizards\" />
   </ItemGroup>
   <ItemGroup>
