--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -101,12 +101,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Api\FulfillmentController.cs" />
     <Compile Include="Controllers\Api\NotificationController.cs" />
+    <Compile Include="Controllers\Api\PaymentGatewayController.cs" />
     <Compile Include="Controllers\Api\SecurityController.cs" />
     <Compile Include="Controllers\Api\SettingController.cs" />
+    <Compile Include="Converters\FulfillmentCenterConverter.cs" />
+    <Compile Include="Converters\PaymentGatewayConverter.cs" />
+    <Compile Include="Model\FulfillmentCenter.cs" />
+    <Compile Include="Model\PaymentGateway.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Notification\InMemoryNotifierImpl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IFoundationFulfillmentRepository.cs" />
+    <Compile Include="Repositories\FoundationFulfillmentRepositoryImpl.cs" />
     <Compile Include="Security\ApiAccountProvider.cs" />
     <Compile Include="Security\ApplicationClaimsIdentityProvider.cs" />
     <Compile Include="Security\Hmac\HmacAuthenticationExtensions.cs" />
@@ -128,6 +136,7 @@
     <Compile Include="Security\Models\ApplicationUserExtended.cs" />
     <Compile Include="Security\OwinConfig.cs" />
     <Compile Include="Security\PermissionService.cs" />
+    <Compile Include="Services\FulfillmentServiceImpl.cs" />
     <Compile Include="Settings\SettingsManager.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +170,10 @@
     <ProjectReference Include="..\..\..\VirtoCommerce.Framework.Web\VirtoCommerce.Framework.Web.csproj">
       <Project>{f7c9313b-522e-4619-abc9-8c7d4600d6b5}</Project>
       <Name>VirtoCommerce.Framework.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VirtoCommerce.Domain\VirtoCommerce.Domain.csproj">
+      <Project>{67c58a78-ddea-4fa3-a969-1cab582918e4}</Project>
+      <Name>VirtoCommerce.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
