--- a/src/Presentation/WebAdmin/Modules/Inventory/VirtoCommerce.InventoryModule.Test/VirtoCommerce.InventoryModule.Test.csproj
+++ b/src/Presentation/WebAdmin/Modules/Inventory/VirtoCommerce.InventoryModule.Test/VirtoCommerce.InventoryModule.Test.csproj
@@ -88,6 +88,10 @@
       <Project>{e7fc9a51-1b39-4bdc-983a-8a059c5fc58b}</Project>
       <Name>CommerceFoundation</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Core\VirtoCommerce.Core.Web\VirtoCommerce.CoreModule.Web.csproj">
+      <Project>{47d7c89c-62a8-44ec-b544-f24e874192ac}</Project>
+      <Name>VirtoCommerce.CoreModule.Web</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Core\VirtoCommerce.Domain\VirtoCommerce.Domain.csproj">
       <Project>{67c58a78-ddea-4fa3-a969-1cab582918e4}</Project>
       <Name>VirtoCommerce.Domain</Name>
