UPD: stores - binding to real data; Inventory - fulfillment centers list added.

--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -141,6 +141,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="module.manifest" />
+    <Content Include="Scripts\common\resources\fulfillments.js" />
+    <Content Include="Scripts\common\resources\paymentgateways.js" />
     <Content Include="Scripts\Settings\blades\settings-detail.js" />
     <Content Include="Scripts\Settings\blades\settings-detail.tpl.html" />
     <Content Include="Scripts\Settings\blades\%24settings-list.js" />
